--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Hello world! I'm new to github and programming in general. This is just practice. 
 
-Trying push commit again.
+Made some changes...
+Made some more changes...
